[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "NAME"
version = "0.3.0"
description = "DESCRIPTION"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9.9",
    "pre-commit>=4.1.0",
    "pytest>=8.3.3",
]

[tool.setuptools.packages.find]
where = ["src"]
